WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96192
[V8] V8DOMWindowShell does not need to be RefCounted
https://bugs.webkit.org/show_bug.cgi?id=96192
Summary
[V8] V8DOMWindowShell does not need to be RefCounted
Adam Barth
Reported
2012-09-08 23:40:08 PDT
[V8] V8DOMWindowShell does not need to be RefCounted
Attachments
Patch
(3.80 KB, patch)
2012-09-08 23:42 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-09-08 23:42:35 PDT
Created
attachment 162979
[details]
Patch
Kentaro Hara
Comment 2
2012-09-08 23:45:38 PDT
Comment on
attachment 162979
[details]
Patch Sounds reasonable.
WebKit Review Bot
Comment 3
2012-09-09 00:27:18 PDT
Comment on
attachment 162979
[details]
Patch Clearing flags on attachment: 162979 Committed
r127977
: <
http://trac.webkit.org/changeset/127977
>
WebKit Review Bot
Comment 4
2012-09-09 00:27:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug