Source/WebCore/bindings/v8/ScriptController.h
@@ -223,7 +223,7 @@ private:
     const String* m_sourceURL;
 
     // For the moment, we have one of these. Soon we will have one per DOMWrapperWorld.
-    RefPtr<V8DOMWindowShell> m_windowShell;
+    OwnPtr<V8DOMWindowShell> m_windowShell;
 
     // The isolated worlds we are tracking for this frame. We hold them alive
     // here so that they can be used again by future calls to
